# odysseus_website

./: .cursorignore  .gitignore  .gitmodules  Relatorio_Validacao_Sinais_Otimizados.txt  autonomous_trading_system.md  dynamic_trading_system_flow.md  git-auto-push.sh  git-push.sh  index.html  otel-collector-config.yaml  package-lock.json  relatorio_sinais_otimizados.txt  script.js  styles.css  trading_system_flow.md  trading_system_implementation.py  transaction_logs.json
QuantGPT-v2/: package-lock.json
composio/: __init__.py  gitsearch.py  gmail.py  primeiro.py  test_calendar_agent.py  tools.py
concurso_analyzer/: README.md  analise_questoes.py  crew_comparative.py  error_handler.py  main_new.py  pdf_analyzer_crew.py  process_all_pdfs.py  requirements.txt  test3.py  test_concurso.py  test_concurso2.py  test_formato.py  test_timing.py
expressoes/: caixote.txt  caixote_01.txt  config_base.txt  talib_expr.py  template_o1.txt
fluxo_tranding_vbt_cwai_3/: .windsurfrules  StrategyCrew.py  StrategyFlow.py  arquitetura_crewai.md  arquitetura_vectorbtpro.md  documentacao_crewai.md  documentacao_vectorbtpro.md  setup.py
mlflow-docs/: README.md
odysseus/: csv_duckdb.py  exemplo_gotas.py  gotas_backtesting.py  gotas_estrategia.py  gotas_estrategia_2.py  guia_complexo_crewai.md  rascunho_div.txt  rascunho_org.txt  (+2 more)
vectorbt.pro/odysseus/agentes_ia/stock_analysis/: README.md  pyproject.toml
vectorbt.pro/odysseus/agentes_ia/stock_analysis/src/stock_analysis/: crew.py
vectorbt.pro/odysseus/agentes_ia/stock_analysis/src/stock_analysis/tools/: calculator_tool.py
(+1226 files in other folders)
